[package]
name = "rv1106_platform"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.1"
rand = "0.9.0-alpha.1"
log = "0.4.21"
env_logger = "0.11.3"

[target.'cfg(windows)'.dependencies]
minifb = {git = "https://github.com/emoon/rust_minifb.git"}
device_query = "2.0.0"

[target.'cfg(all(target_os = "linux", target_arch = "arm"))'.dependencies]
framebuffer = "0.3.1"